--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-380.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-359.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-426.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇻🇳 越南-5.30MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.58MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-307.1KB/s(Youtube:不良林), server: 103.253.43.228, port: 38000, type: trojan, password: da8e0008-3c2b-4363-b582-0d9a981cebea, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-528.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇻🇳 越南-1.01MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇨🇳 中国-452.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-532.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-161.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-548.4KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-360.0KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-380.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-2.29MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-837.8KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-380.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-307.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-161.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-548.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-360.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
