--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-359.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇭🇰 香港-2.73MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.58MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-708.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.72MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-1.32MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-322.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-200.2KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-837.8KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -66,19 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -89,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -105,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
@@ -130,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.3KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.73MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-708.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.72MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-200.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-837.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
